--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
     "require": {
         "php": "^8.1",
         "doctrine/migrations": "^3.2",
-        "doctrine/orm": "^2.14",
+        "doctrine/orm": "^2.14 || ^3.2",
         "enumeum/doctrine-enums": "^2.0",
-        "symfony/console": "^4.4 || ^5.4 || ^6.0",
-        "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0"
+        "symfony/console": "^4.4 || ^5.4 || ^6.0 || ^7.0",
+        "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0 || ^7.0"
     },
     "require-dev": {
         "doctrine/sql-formatter": "^1.0",
@@ -36,7 +36,7 @@
         "phpstan/phpstan": "^1.1",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^8.5 || ^9.5",
-        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.0"
+        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.0 || ^7.0"
     },
     "conflict": {
         "doctrine/dbal": "<2.13.1 || ^3.0 <3.2",
