--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-    "name": "enumeum/doctrine-enums-bundle",
+    "name": "josuealcalde-utamed/doctrine-enums-bundle",
+    "replace": {
+      "josuealcalde-utamed/doctrine-enums": "self.version"
+    },
     "description": "Bundle for Doctrine enumerations extension for Postgres",
     "license": "MIT",
     "type": "library",
@@ -15,16 +18,20 @@
         {
             "name": "Alexey Sitka",
             "email": "alexey.sitka@gmail.com"
+        },
+        {
+            "name": "Josué Alcalde",
+            "email": "josue.alcalde@utamed.es"
         }
     ],
     "support": {
-        "email": "alexey.sitka@gmail.com"
+        "email": "josue.alcalde@utamed.es"
     },
     "require": {
         "php": "^8.1",
         "doctrine/migrations": "^3.2",
         "doctrine/orm": "^2.14 || ^3.2",
-        "enumeum/doctrine-enums": "^2.0",
+        "josuealcalde-utamed/doctrine-enums": "^2.2",
         "symfony/console": "^4.4 || ^5.4 || ^6.0 || ^7.0",
         "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0 || ^7.0"
     },
